# secure_rag_enterprise

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT_CLOUD.md  Makefile  README.md  docker-compose.yml  requirements-dev.txt
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  config.py  main.py
api/app/admin/: __init__.py  authz.py  keycloak_admin_client.py  settings_store.py
api/app/api/: admin.py  feedback.py  health.py  ingest.py  query.py  runs.py
api/app/audit/: service.py
api/app/auth/: context.py  group_mapping.py  jwt_validator.py  service.py
api/app/db/: database.py  init_db.py  models.py  repository.py
api/app/generation/: guardrails.py  ollama_client.py  service.py  vlm_router.py
api/app/ingestion/: drive_auth.py  gdrive_connector.py  local_connector.py  multimodal.py  parser.py  path_metadata.py  pipeline.py  tabular.py
api/app/models/: schemas.py
api/app/observability/: logging.py  (+1 more)
api/tests/: conftest.py  test_acl_filters.py  test_admin_api.py  test_admin_authz.py  test_answerability.py  test_api_smoke.py  test_audit_schema.py  test_auth.py  test_chunking.py  test_diversity.py  test_followup.py  test_gdrive_connector.py  test_generation_guardrails.py  test_generation_map_reduce.py  test_group_mapping.py  test_guardrails.py  test_ingest_async_api.py  test_jwt_validator.py  test_local_ingestion.py  test_multimodal_ingest.py  test_phase4_multimodal.py  test_policy_client.py  test_query_intent.py  test_repository_sanitization.py  test_reranker.py  test_retrieval_filters.py  test_settings.py  test_tabular_ingestion.py
(+36 files in other folders)
